--- a/Pro Bio Markt.csproj
+++ b/Pro Bio Markt.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvoiceSreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InvoiceSreen.Designer.cs">
+      <DependentUpon>InvoiceSreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoadingScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="InvoiceSreen.resx">
+      <DependentUpon>InvoiceSreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoadingScreen.resx">
       <DependentUpon>LoadingScreen.cs</DependentUpon>
     </EmbeddedResource>
